--- a/CSS 학습/3.가상 선택자/3.before, after.html
+++ b/CSS 학습/3.가상 선택자/3.before, after.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <style>
+      /* before after는 콜론을 두번 사용 */
       li::before {
         /* 필수속성 : content */
         content: '번호';
