오늘 내용 복습

--- a/CSS 학습/4.상속과 우선순위/1.상속.html
+++ b/CSS 학습/4.상속과 우선순위/1.상속.html
@@ -10,12 +10,13 @@
       font-size: 14px;
     }
     .eco {
+      margin: 20px auto 0;
       width: 500px;
       height: 500px;
       border: 1px solid red;
 
       /* 상속 */
-      font-size: 1.5em;
+      font-size: 1.5em; /*현재 14px이므로 1.5배인 21px*/
       color: dodgerblue;
       font-weight: 700;
     }
@@ -23,7 +24,7 @@
       width: 200px;
       height: 200px;
       background: orange;
-      color: gray;
+      color: black;
     }
     .plant {
       width: 200px;
