--- a/CSS 학습/5.박스속성/2.속성/3.margin.html
+++ b/CSS 학습/5.박스속성/2.속성/3.margin.html
@@ -9,8 +9,8 @@
     body {
       margin: 0;
       padding: 0;
-
     }
+
     .container {
       width: 400px;
       height: 300px;
@@ -44,13 +44,13 @@
       background: skyblue;
 
       /* 상하좌우 20px씩 각각 적용 */
-      margin: 20px;
+      /* margin: 20px; */
 
       /* [상하] [좌우] */
-      margin: 30px 50px;
+      /* margin: 30px 50px; */
 
       /*       상   좌우  하 */
-      margin: 40px 50px 60px;
+      /* margin: 40px 50px 60px; */
 
       /* 위부터 시계방향 */
       margin: 10px 20px 30px 40px;
@@ -83,6 +83,6 @@
     <div class="box"></div>
   </div>
 
-  <div class="item"></div>
+  <div class="item"></div>  
 </body>
 </html>
