--- a/CSS 학습/5.박스속성/2.속성/5.border.html
+++ b/CSS 학습/5.박스속성/2.속성/5.border.html
@@ -43,9 +43,10 @@
       border-bottom: 4px dashed green;
       border-left: 4px dotted skyblue;
       
-      border-top-color: violet;
+      /* border-top-color: violet;
       border-top-style: double;
-      border-top-width: 4px;
+      border-top-width: 4px; */
+      border-top: 4px double violet;
     }
   </style>
 </head>
