--- a/CSS 학습/5.박스속성/1.단위/1.px, percent.html
+++ b/CSS 학습/5.박스속성/1.단위/1.px, percent.html
@@ -22,12 +22,14 @@
   </style>
 </head>
 <body>
-  <!-- .root>.parent>.child*2 -->
+  <!-- .root{Root}>.parent{Parent}>.child{Child$}*2 -->
   <div class="root">Root
     <div class="parent">Parent
       <div class="child">Child1</div>
       <div class="child">Child2</div>
     </div>
+  </div>
+  </div>
   </div>
 </body>
 </html>
