--- a/CSS 학습/5.박스속성/1.단위/3.vw, vh.html
+++ b/CSS 학습/5.박스속성/1.단위/3.vw, vh.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       padding: 0;
-    }
+    } /*여백 완전히 지우기*/
+
     .box {
       background: orange;
       width: 100%;
@@ -21,8 +22,6 @@
   </style>
 </head>
 <body>
-  <div class="box">
-    
-  </div>
+  <div class="box"></div>
 </body>
 </html>
