--- a/CSS 학습/5.박스속성/2.속성/2.max, min.html
+++ b/CSS 학습/5.박스속성/2.속성/2.max, min.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 <style>
-
   .parent {
-    width: 200px;
+    width: 600px; 
     height: 300px;
     background: skyblue;
   }
@@ -18,6 +17,7 @@
     background: orange;
     max-width: 500px;
     min-width: 200px;
+    /* 최소최대치 때문에 parent가 얼마나 줄어들든/커지든 제한까지만 출력 */
   }
 </style>
 </head>
