--- a/CSS 학습/5.박스속성/2.속성/8.overlfow.html
+++ b/CSS 학습/5.박스속성/2.속성/8.overlfow.html
@@ -25,6 +25,8 @@
       background: red;
       border: 4px solid orange;
       font-size: 40px;
+      text-align: center;
+      padding: 10px;
     }
 
     .parent .child:hover{
