html 종합실습 footer 수정

--- a/HTML 학습/2.컨텐츠 태그/4.종합실습.html
+++ b/HTML 학습/2.컨텐츠 태그/4.종합실습.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- reset css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
-    />
     <!-- common css -->
     <link rel="stylesheet" href="../../common.css" />
 
@@ -82,9 +79,19 @@
       }
       /* .container .main .article-list article p {
         background: aqua; 
-    } */
+         } */
+      
       .container footer {
-        border: 4px solid green;
+        border-top: 4px solid lightgray;
+        padding: 15px 10px;
+      }
+      .container footer .contact div{
+        /* border: 4px solid green; */
+        float: left;
+        margin-right: 5%;
+        font-style: italic;
+        color: lightgray;
+        
       }
     </style>
   </head>
