--- a/CSS 학습/6.글꼴, 문자/3.text.html
+++ b/CSS 학습/6.글꼴, 문자/3.text.html
@@ -17,29 +17,32 @@
     /* background: orange; */
     width: fit-content;
     margin: 0 auto; 
-    /* 박스크기가 줄어듦으로 인해 박스의 마진을 조정해 위치 옮기기 */
+    /* 박스크기가 줄어듦으로 인해 박스의 마진을 조정해 왼쪽에서 위치 옮기기 */
     letter-spacing: 10px;
   }
   p{
     width: 80%;
     margin: 50px auto 0;
     border: 1px solid #000;
-    padding: 15px;
+    padding: 20px;
     font-size: 30px; 
     /* 1.2 ~1.6 보기 좋은 행간 */
     line-height: 1.5;
     text-align:justify;
-    /* justify는 두 줄 이상일 때만 가능 */
+    /* taj justify는 두 줄 이상일 때만 가능 */
     text-indent: 5px;
+    /* 부호에 따라 들여쓰기/내어쓰기 */
     word-spacing: 10px;
+    /* 단어간 간격 */
     letter-spacing: 2px;
+    /* 자간 */
     /* 특정 구간에 직접 공백 넣기 &nbsp; */
   }
 </style>
 <body>
   <h1>Hello!</h1>
   <!-- 로렘입숨 -->
-  <p>법률이 정하는 주요방위산업체에 종사하는 근로자의 단체행동권은 법률이 정하는 바에 의하여 이를 제한하거나 인정하지 아니할 수 있다. 대통령의 임기연장 또는 중임변경을 위한 헌법개정은 그 헌법개정 제안 당시의 대통령에 대하여는 효력이 없다. 모든 국민은 능력에 따라 균등하게 교육을 받을 권리를 가진다.
+  <p>법률이&nbsp; 정하는 주요방위산업체에 종사하는 근로자의 단체행동권은 법률이 정하는 바에 의하여 이를 제한하거나 인정하지 아니할 수 있다. 대통령의 임기연장 또는 중임변경을 위한 헌법개정은 그 헌법개정 제안 당시의 대통령에 대하여는 효력이 없다. 모든 국민은 능력에 따라 균등하게 교육을 받을 권리를 가진다.
 
     선거운동은 각급 선거관리위원회의 관리하에 법률이 정하는 범위안에서 하되, 균등한 기회가 보장되어야 한다. 헌법재판소 재판관은 탄핵 또는 금고 이상의 형의 선고에 의하지 아니하고는 파면되지 아니한다. 탄핵결정은 공직으로부터 파면함에 그친다. 그러나, 이에 의하여 민사상이나 형사상의 책임이 면제되지는 아니한다.</p>
 
