--- a/CSS 학습/7.배경/2.bg-size.html
+++ b/CSS 학습/7.배경/2.bg-size.html
@@ -17,7 +17,11 @@
     background-image: url('../../img/tulip.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    /* background-size: contain; */
+    /* --> 원본을 보여주지만 여백이 발생할 수 있음*/
     /* 이미지 짤림 손해 최소화 */
+
+    
   }
 
 </style>
