--- a/CSS 학습/7.배경/3.bg-attachment.html
+++ b/CSS 학습/7.배경/3.bg-attachment.html
@@ -14,7 +14,10 @@
       height: 700px;
       margin: 200px auto 0;
 
-      background: url('../../img/sky.jpg') no-repeat center / cover fixed;
+      background: url('../../img/sky.jpg') no-repeat center / contain fixed;
+      /* background: url('../../img/sky.jpg') no-repeat center / cover fixed; */
+      /* background: url('../../img/sky.jpg') no-repeat center / contain scroll; */
+      /* background: url('../../img/sky.jpg') no-repeat center / cover scroll; */
 
       /* background-attachment: fixed; */
     }
