--- a/CSS 학습/8.전통레이아웃/2.중첩레이아웃float문제.html
+++ b/CSS 학습/8.전통레이아웃/2.중첩레이아웃float문제.html
@@ -34,7 +34,7 @@
         border: 3px solid green;
         background: yellowgreen;
         border-radius: 20px;
-
+        margin-right: 5px;
         float: left;
       }
       /* .vbox {
