종합실습 배너추가

--- a/HTML 학습/2.컨텐츠 태그/4.종합실습.html
+++ b/HTML 학습/2.컨텐츠 태그/4.종합실습.html
@@ -91,7 +91,15 @@
         margin-right: 5%;
         font-style: italic;
         color: lightgray;
-        
+      }
+
+      aside{
+        width: 5%;
+        height: 600px;
+        background: orange;
+        position: absolute;
+        right: 5px;
+        top: 20px;
       }
     </style>
   </head>
