--- a/CSS 학습/8.전통레이아웃/7.stack-order.html
+++ b/CSS 학습/8.전통레이아웃/7.stack-order.html
@@ -30,8 +30,8 @@
       margin-top: 30px;
     }
     .box1 {
-      z-index: index 2;
-      left: 300px;
+      z-index: 2;
+      left: 400px;
     }
     .box4 {
       z-index: -1;
@@ -40,7 +40,7 @@
       z-index: 1;
     }
     .box5 {
-      right: 220px;
+      right: 300px;
     }
   </style>
 </head>
