--- a/CSS 학습/9. 전환, 변환/1.transition.html
+++ b/CSS 학습/9. 전환, 변환/1.transition.html
@@ -12,7 +12,6 @@
       background: red;
       margin: 50px;
 
-
       /* 전환은 원본 태그에 작성*/
       /* transition-property: width;
       transition-duration: 0.5s; */
@@ -20,17 +19,17 @@
       /* transition-property: all;
       transition-duration: 1s; */
 
-      transition-property: width, background;
-      transition-duration: 1s, 2s;
+      /* transition-property: width, background;
+      transition-duration: 0.5s, 1s; */
       /* 각각 시간 따로 적용 */
 
       /* transition-delay: 1s; */
       /* 1초 있다가 전환 */
 
-      transition-timing-function: steps(5);
+      /* transition-timing-function: steps(5); */
       /* 기본값은 ease */
 
-      transition: all 1s 0.5s linear;
+      transition: all 1s 0.5s;
       /* 모든걸 1초에 걸쳐 진행, 2초 딜레이 균일한 속도로 */
     }
 
@@ -38,9 +37,20 @@
       width: 300px;
       background: skyblue;
     }
+
+    .face{
+      width: 250px;
+      height: 250px;
+      background: rgb(40, 230, 81) url(../../img/smile.png) no-repeat left / cover;
+      transition: all 0.5s;
+    }
+    .face:hover {
+      background: #d61414 url(../../img/sad.png) no-repeat left/cover;
+    }
   </style>
 </head>
 <body>
   <div class="box"></div>
+  <div class="face"></div>
 </body>
 </html>
