웹페이지 실습

--- a/Web Project/방문예약.html
+++ b/Web Project/방문예약.html
@@ -11,7 +11,7 @@
 
 </style>
 <body>
-  <header>
+  <!-- <header>
     <nav>
       <div></div>
       <ul>
@@ -28,7 +28,8 @@
         <option value="chn">中文</option>
       </select>
     </nav>
-  </header>
+  </header> -->
+
   <container>
     <divc class="banner">
       <h1 class="title">방문 예약</h1>
@@ -50,18 +51,19 @@
         <li>※ 지구를 위한 작지만 큰 노력, 서비스내역서를 이메일로 수령하시어 환경을 위한 작은 움직임에 동참해주세요</li>
       </ul>
       <div>  
-        <button></button>
-        <button></button>
+        <button value="reserve">예약등록</button>
+        <button value="confirm">예약확인 및 취소</button>
       </div>
     </content>
   </container>
-  <footer>
+  
+  <!-- <footer>
     <div></div>
     <h4>개인정보 처리 방침</h4>
     <div>주식회사 투바 | 대표 : 임종완 | 전화 : 1522-6222 | 사업자등록번호 : 207-81-51604 
       | 통신판매신고 : 제2009-서울광진-0356호</div>
     <div>본점 : 경기도 남양주시 수동면 남가로 1595-4</div>
     <div>Copyright ⓒ TUVA All Rights Reserved.</div>
-  </footer>
+  </footer> -->
 </body>
 </html>
