tuva 웹페이지 예약+픽업 기초 완

--- a/Web Project/방문예약.html
+++ b/Web Project/방문예약.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>방문예약</title>
   <link rel="stylesheet" href="../common.css">
   <link rel="stylesheet" href="reserve.css">
 </head>
@@ -43,8 +43,9 @@
       <div>list</div>
     </nav>
     <div class="content">
-      <h3>고객님의 원활한 서비스 진행을 위한 방문 전 준비사항 안내입니다.</h3>
-      <ul class="backup clearfix">
+      <div class="guide">
+        <h3>고객님의 원활한 서비스 진행을 위한 방문 전 준비사항 안내입니다.</h3>
+        <ul class="backup clearfix">
         <li>
           <div class="icon icon1"></div>
           <h4>나의 iPhone 찾기 해제</h4>
@@ -80,6 +81,7 @@
       <div class="bottom"> 
           <a href="#">예약등록</a>
           <a href="#">예약확인 및 취소</a>   
+        </div>
       </div>
     </div>
   </div>
