--- a/Web Project/픽업서비스.html
+++ b/Web Project/픽업서비스.html
@@ -18,7 +18,14 @@
         </div>
       </div>
     </banner>
-    <nav class="bar"></nav>
+    <nav class="bar">
+      <section>
+        <a href="http://www.tuva.co.kr/web/index.do">home</a>
+        <ul class="list">
+          
+        </ul>
+      </section>
+    </nav>
     <div class="middle">
       <div class="main">
         <div class="service">
@@ -73,6 +80,27 @@
               꼼꼼하고 안전하게 포장하여<br>
               다시 고객님께 배송해드립니다.<br>
             </p>
+          </li>
+        </ul>
+      </div>
+      <!-- middle end -->
+      <div class="quickmenu">
+        <ul>
+          <li>
+            <a href="http://www.tuva.co.kr/web/booking.do" class="icon icon1"></a>
+            <span>방문예약</span>
+          </li>
+          <li>
+            <a href="http://www.tuva.co.kr/web/location.do" class="icon icon2"></a>
+            <span>위치안내</span>
+          </li>
+          <li>
+            <a href="http://www.tuva.co.kr/web/price.do" class="icon icon3"></a>
+            <span>서비스가격</span>
+          </li>
+          <li>
+            <a href="#" class="icon icon4"></a>
+            <span>카카오톡</span>
           </li>
         </ul>
       </div>
