사이드바 추가, 헤더 수정

--- a/Web Project/방문예약.html
+++ b/Web Project/방문예약.html
@@ -112,8 +112,8 @@
   </div>
 
         <!-- footer -->
-        <div class="total_footer">
-          <div class="sub_footer">
+      <div class="total_footer">
+        <div class="sub_footer">
               <div class="total_logo">
                   <span class="logo"><!--TUVA--></span>
                   <p class="top_p">
@@ -136,5 +136,25 @@
           </div>
       </div>
   </container>
+  <div class="quickmenu">
+    <ul>
+      <li>
+        <a href="http://www.tuva.co.kr/web/booking.do" class="icon icon1"></a>
+        <span>방문예약</span>
+      </li>
+      <li>
+        <a href="http://www.tuva.co.kr/web/location.do" class="icon icon2"></a>
+        <span>위치안내</span>
+      </li>
+      <li>
+        <a href="http://www.tuva.co.kr/web/price.do" class="icon icon3"></a>
+        <span>서비스가격</span>
+      </li>
+      <li>
+        <a href="#" class="icon icon4"></a>
+        <span>카카오톡</span>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
