웹페이지 다듬기

--- a/Web Project/방문예약.html
+++ b/Web Project/방문예약.html
@@ -63,9 +63,21 @@
         <h2 class="sub">Visit Reservations</h2>
       </div>
     </div> 
+    <!-- nav bar -->
     <nav class="bar">
-      <div class="home">icon</div>
-      <div class="list">list</div>
+      <section>
+          <div class="home_menu">
+              <a href="#" id="pic">
+              </a>
+              <ul><a href="#">채용</a>
+                  <!-- <li>
+                      <a href="#" id="list">
+                          채용
+                      </a>
+                  </li> -->
+              </ul>
+          </div>
+      </section>
     </nav>
     <div class="content">
       <div class="guide">
