--- a/Web Project/픽업서비스.html
+++ b/Web Project/픽업서비스.html
@@ -20,10 +20,17 @@
     </banner>
     <nav class="bar">
       <section>
-        <a href="http://www.tuva.co.kr/web/index.do">home</a>
-        <ul class="list">
-          
-        </ul>
+          <div class="home_menu">
+              <a href="#" id="pic">
+              </a>
+              <ul><a href="#">채용</a>
+                  <!-- <li>
+                      <a href="#" id="list">
+                          채용
+                      </a>
+                  </li> -->
+              </ul>
+          </div>
       </section>
     </nav>
     <div class="middle">
